# lattice-nodes

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md  REFACTORING_GUIDE.md  adapter_development_guide.md
.github/workflows/: codeql.yml  dependency-review.yml  e2e-tests.yml  unit-tests.yml
docs/: adapter_development_guide.md  error_codes.md  memory_usage.md  server_requirements.md
docs/design-gaps/: multihop-data-uplink.md
docs/superpowers/plans/: 2026-06-25-open-source-hardening.md  2026-07-13-message-routing.md  2026-07-13-repo-restructure.md  2026-07-14-e2e-test-suite.md  2026-07-16-phase1-proto-v3-e2e-aead.md  2026-07-20-phase2-multihop-uplink.md  2026-07-21-phase3-downlink-source-routing.md  2026-07-21-phase4-dual-master-failover.md  2026-07-21-phase5-followups-hardening.md  nodes-phase1-multihop-relay.md  nodes-phase2-bug-fixes.md  nodes-phase3-proto-v2.md  nodes-phase4-pir-health.md  nodes-phase5-node-identity.md  nodes-phase6-artist-api.md  nodes-phase7-fixes-cleanup.md  nodes-phase8-hotswap.md  nodes-phase9-dual-master.md
docs/superpowers/specs/: 2026-06-25-nanopb-serial-protobuf.md  2026-06-25-open-source-hardening-design.md  2026-06-29-architecture-review.md  2026-06-30-ci-oss-hardening-design.md  2026-07-13-message-routing-design.md  2026-07-13-repo-restructure-design.md  2026-07-14-e2e-test-suite-design.md  2026-07-16-multihop-routing-e2e-crypto-design.md  2026-07-22-close-all-open-issues-design.md
main/: Adapter.cpp  Adapter.h  AdapterFactory.cpp  AdapterFactory.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  PIR_Adapter.cpp  PIR_Adapter.h  main.ino  mesh_controller.cpp  mesh_controller.h  project_config.h
main/lib/planetopia-protocol/: adapter_types.h  opcodes.h
main/proto/: mesh.options
main/src/Adapter/: Adapter.cpp  Adapter.h  AdapterFactory.cpp  AdapterFactory.h
main/src/Adapter/PIR_Adapter/: PIR_Adapter.cpp  PIR_Adapter.h
main/src/Adapter/Serial_Adapter/: Serial_Adapter.cpp  Serial_Adapter.h
main/src/Mesh/: Mesh.cpp  Mesh.h
main/src/Mesh/peers/: PeerManager.cpp  PeerManager.h
main/src/Mesh/routing/: MessageRouter.cpp  MessageRouter.h
main/src/Mesh/serialization/: ProtobufCodec.cpp  ProtobufCodec.h  mesh.pb.h
main/src/Mesh/serialization/nanopb/: pb.h  pb_common.h  pb_encode.h
main/src/adapter/: Adapter.cpp  AdapterFactory.cpp  AdapterFactory.h
main/src/adapter/pir/: PirAdapter.cpp  PirAdapter.h
main/src/adapter/serial/: SerialAdapter.cpp  SerialAdapter.h  SerialFraming.cpp  SerialFraming.h
main/src/app/: BootManager.h  ButtonHandler.h  DisplayManager.h
main/src/config/: ConfigurationManager.h
main/src/core/: ErrorCodes.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
main/src/error/: Error.h  ErrorCodes.h  ErrorCore.cpp  ErrorCore.h
main/src/hardware/: Led.cpp  Led.h
main/src/hardware/input/: Button.cpp  Button.h  GpioInput.cpp  GpioInput.h  Pir.cpp  Pir.h
main/src/hardware/output/: GpioOutput.cpp  GpioOutput.h  Led.cpp  Led.h  SevenSegDisplay.cpp  SevenSegDisplay.h
main/src/logging/: Logger.cpp  Logger.h
main/src/mesh/: E2ECrypto.h  E2EKeyStore.h  Enrollment.cpp  Enrollment.h  Mesh.cpp  Mesh.h  MeshCrypto.h  NeighborTable.h  PeerRegistry.cpp  PeerRegistry.h  ReplayCache.h  RouteTable.h
main/src/mesh/serialization/: mesh.pb.c  mesh.pb.h
main/src/mesh/serialization/nanopb/: pb_decode.h
main/src/network/: MacAddress.h  NetworkManager.h
main/src/persistence/: EEPROM_Manager.cpp  EEPROM_Manager.h  EepromManager.cpp  EepromManager.h
main/src/utils/: ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt
tests/e2e/harness/: FakeHub.cpp  FakeHub.h  MeshSimTest.h  NodeContext.cpp  NodeContext.h  SimClock.h  SimNode.cpp  SimNode.h  SimWorld.cpp  SimWorld.h  VirtualBus.cpp  VirtualBus.h
tests/e2e/scenarios/: test_dual_master_e2e.cpp  test_e2e_aead.cpp  test_enrollment_e2e.cpp  test_harness_smoke.cpp  test_hotswap_e2e.cpp  test_master_health_e2e.cpp  test_multihop_e2e.cpp  test_pir_dataflow_e2e.cpp  test_pir_health_e2e.cpp  test_replay_e2e.cpp  test_route_report_e2e.cpp  test_seq_wrap.cpp  test_serial_robustness_e2e.cpp
tests/integration/: harness.py  requirements.txt  test_config.py  test_enrollment.py
tests/mocks/: Arduino.cpp  Arduino.h  EEPROM.cpp  EEPROM.h  WiFi.cpp  WiFi.h  esp_err.h  esp_now.h  esp_now_mock.cpp  esp_now_mock.h  esp_system.h  esp_wifi.h  esp_wifi_mock.cpp  esp_wifi_mock.h  firmware_stubs.cpp  mesh_logic_impl.cpp  serial_mock.cpp  serial_mock.h  time_mock.cpp  time_mock.h
tests/unit/: test_e2e_crypto.cpp  test_e2e_keystore.cpp  test_eeprom_manager.cpp  test_mesh_logic.cpp  test_mocks.cpp  test_neighbor_table.cpp  test_pir_adapter.cpp  test_protobuf_codec.cpp  test_replay_cache.cpp  test_route_report.cpp  test_route_table.cpp  test_serial_framing.cpp  test_smoke.cpp
